--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,12 @@ footer {
         width: 40px;
         height: 40px;
     }
+     /* Tamaño a la imagen investigador */
+    .container__imagen img{
+         margin-top: 10px;
+        width: 60%;
+        height: 60%;
+ }
 }     
  
   
